--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -5,7 +5,7 @@ data/com.github.finefindus.eyedropper.metainfo.xml.in.in
 # find data -name "*.ui*" -print
 data/resources/ui/shortcuts.ui
 data/resources/ui/window.ui
-data/resources/ui/hex-entry.ui
+#data/resources/ui/hex-entry.ui
 data/resources/ui/preferences.ui
 data/resources/ui/color-format-row.ui
 data/resources/ui/palette-window.ui
