--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,6 +51,28 @@ jobs:
       - name: Run spellchecker
         run: codespell  -S po,_build,.git,.flatpak,_builddir,build,target -L crate,rouge,vermillion
 
+
+  update_translations:
+    name: Update .pot template
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Install gettext
+        run: |
+          sudo apt update
+          sudo apt install gettext -y
+      - name: Update Eyedropper.pot
+        run: |
+          GETTEXT_PACKAGE="Eyedropper" XGETTEXT_KEYWORDS="--msgid-bugs-address="https://github.com/FineFindus/eyedropper"" ./scripts/make-pot
+          echo "::set-output name=POT_LINES_CHANGED::$(git diff -U0 | grep '^[+|-][^+|-]' | grep -Ev '^[+-]"POT-Creation-Date' | wc -l)"
+      - name: Push changes  
+        if: ${{ steps.update_pot.outputs.POT_LINES_CHANGED > 0 }}
+        uses: EndBug/add-and-commit@v9
+        with:
+          default_author: github_actions
+          message: "chore(translations): update template"
+          add: 'po/Eyedropper.pot'
+ 
   # notify_translators:
   #   name: Notify Translators
   #   runs-on: ubuntu-latest
