ci(translations): include project name

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -63,7 +63,7 @@ jobs:
           sudo apt install gettext -y
       - name: Update Eyedropper.pot
         run: |
-          GETTEXT_PACKAGE="Eyedropper" XGETTEXT_KEYWORDS="--msgid-bugs-address="https://github.com/FineFindus/eyedropper"" ./scripts/make-pot
+          GETTEXT_PACKAGE="Eyedropper" XGETTEXT_KEYWORDS="--msgid-bugs-address="https://github.com/FineFindus/eyedropper" --package-name=Eyedropper" ./scripts/make-pot.sh
           echo "POT_LINES_CHANGED=$(git diff -U0 | grep '^[+|-][^+|-]' | grep -Ev '^[+-]"POT-Creation-Date' | wc -l)" >> $GITHUB_ENV
       - name: Push changes  
         if: ${{ env.POT_LINES_CHANGED != 0}}
