--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -88,7 +88,7 @@ jobs:
         with:
           default_author: github_actions
           message: "chore(translations): update template"
-          add: 'po/Eyedropper.pot'
+          add: "['po/Eyedropper.pot', 'po/POTFILES.in']"
  
   # notify_translators:
   #   name: Notify Translators
