--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,8 +15,10 @@ repository = "https://github.com/finefindus/eyedropper"
 opt-level = 3
 
 [profile.release]
-lto = true
 opt-level = 3
+lto = true
+codegen-units = 1
+strip = true
 
 [dependencies]
 log = "0.4"
