--- a/data/com.github.finefindus.eyedropper.metainfo.xml.in.in
+++ b/data/com.github.finefindus.eyedropper.metainfo.xml.in.in
@@ -47,6 +47,25 @@
   <url type="bugtracker">https://github.com/FineFindus/eyedropper/issues</url>
   <content_rating type="oars-1.0" />
   <releases>
+  <release version="0.5.1" date="2023-01-29">
+      <description>
+        <p>Added:</p>
+        <ul>
+          <li>Russian translation</li>
+          <li>Better optimizied releases</li>
+          <li>Returns the exit code on quitting</li>
+        </ul>
+        <p>Changed:</p>
+        <ul>
+          <li>History no longer contains duplicated items</li>
+        </ul>
+        <p>Fixed:</p>
+        <ul>
+          <li>Fixed a bug where the wrong rgb format was used</li>
+          <li>Fixed a bug where LMS and Hunter-Lab had the same setting</li>
+        </ul>
+      </description>
+    </release>
     <release version="0.5.0" date="2023-01-03">
       <description>
         <p>Added:</p>
