feat(metainfo): add additional metadata

--- a/data/com.github.finefindus.eyedropper.metainfo.xml.in.in
+++ b/data/com.github.finefindus.eyedropper.metainfo.xml.in.in
@@ -45,6 +45,9 @@
   </screenshots>
   <url type="homepage">https://github.com/FineFindus/eyedropper</url>
   <url type="bugtracker">https://github.com/FineFindus/eyedropper/issues</url>
+  <url type="help">https://github.com/FineFindus/eyedropper/issues</url>
+  <url type="vcs-browser">https://github.com/FineFindus/eyedropper</url>
+  <url type="contribute">https://github.com/FineFindus/eyedropper/issues</url>
   <content_rating type="oars-1.0" />
   <releases>
   <release version="0.5.1" date="2023-01-29">
