feat(metainfo): update url links

--- a/data/com.github.finefindus.eyedropper.metainfo.xml.in.in
+++ b/data/com.github.finefindus.eyedropper.metainfo.xml.in.in
@@ -47,7 +47,8 @@
   <url type="bugtracker">https://github.com/FineFindus/eyedropper/issues</url>
   <url type="help">https://github.com/FineFindus/eyedropper/issues</url>
   <url type="vcs-browser">https://github.com/FineFindus/eyedropper</url>
-  <url type="contribute">https://github.com/FineFindus/eyedropper/issues</url>
+  <url type="contribute">https://github.com/FineFindus/eyedropper#contributing</url>
+  <url type="translate">https://github.com/FineFindus/eyedropper#translation</url>
   <content_rating type="oars-1.1" />
   <releases>
   <release version="0.5.1" date="2023-01-29">
