--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,9 +25,10 @@ log = "0.4"
 pretty_env_logger = "0.4"
 gettext-rs = { version = "0.7", features = ["gettext-system"] }
 once_cell = "1.17.0"
-gtk = {version = "0.5.5", package = "gtk4"}
-glib = "0.16.7"
-adw = {package = "libadwaita", version = "0.2.1", features = ["v1_2"]}
+gtk = {version = "0.6.0", package = "gtk4"}
+glib = "0.17.0"
+adw = {package = "libadwaita", version = "0.3.0", features = ["v1_2"]}
 gtk-macros = "0.3"
 ashpd = "0.3.2"
+#ashpd = { git = "https://github.com/bilelmoussaoui/ashpd.git"}
 rand = "0.8.5"
