fix(metainfo): shorten caption

--- a/data/com.github.finefindus.eyedropper.metainfo.xml.in.in
+++ b/data/com.github.finefindus.eyedropper.metainfo.xml.in.in
@@ -24,7 +24,7 @@
   <screenshots>
     <screenshot type="default">
       <image>https://raw.githubusercontent.com/FineFindus/eyedropper/master/data/resources/screenshots/main_default_light.png</image>
-      <caption>Main window which a blue color displayed in different formats</caption>
+      <caption>Main window with a color in different formats</caption>
     </screenshot>
     <screenshot>
       <image>https://raw.githubusercontent.com/FineFindus/eyedropper/master/data/resources/screenshots/main_customize_light.png</image>
