--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "eyedropper"
 version = "0.5.1"
 authors = ["FineFindus <finefindusgh@gmail.com>"]
 edition = "2021"
-description = "A powerful color picker and formatter"
+description = "Pick and format colors"
 readme = "README.md"
 license-file = "LICENSE"
 homepage = "https://github.com/finefindus/eyedropper"
