--- a/data/com.github.finefindus.eyedropper.metainfo.xml.in.in
+++ b/data/com.github.finefindus.eyedropper.metainfo.xml.in.in
@@ -47,7 +47,33 @@
   <url type="translate">https://github.com/FineFindus/eyedropper#translation</url>
   <content_rating type="oars-1.1" />
   <releases>
-  <release version="0.5.1" date="2023-01-29">
+    <release version="0.6.0" date="2023-02-24">
+      <description>
+        <p>Added:</p>
+        <ul>
+          <li>Show a toast with an Undo option when clearing the history</li>
+          <li>Use Ctrl-Q to close the window</li>
+          <li>Use a default minimum window size, content should no longer unnecessarily cut off</li>
+          <li>New icon by @bertob</li>
+          <li>Export palettes as Adobe Swatch Exchange (ASE), hex, PAL, Paint.NET  (txt) files</li>
+          <li>Minor changes to the store metadata</li>
+        </ul>
+        <p>Changed:</p>
+        <ul>
+          <li>Hunter-Lab now displays 0 instead of NaN</li>
+          <li>Improved tooltips for copying colors</li>
+          <li>Palette window now uses a button with a more explicit text instead of an icon</li>
+          <li>Reworded project description</li>
+          <li>Updated all screenshots</li>
+        </ul>
+        <p>Fixed:</p>
+        <ul>
+          <li>Separator is now hidden when the history list is hidden</li>
+          <li>Improved editing experience when change the Hex color/name</li>
+        </ul>
+      </description>
+    </release>
+    <release version="0.5.1" date="2023-01-29">
       <description>
         <p>Added:</p>
         <ul>
