--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,7 +29,7 @@ gtk = {version = "0.6.0", package = "gtk4"}
 glib = "0.17.0"
 adw = {package = "libadwaita", version = "0.3.0", features = ["v1_2"]}
 gtk-macros = "0.3"
-ashpd = "0.3.2"
+ashpd = {version = "0.4.0-alpha.4", features = ["gtk4"]}
 #ashpd = { git = "https://github.com/bilelmoussaoui/ashpd.git"}
 rand = "0.8.5"
 bytes = "1.4.0"
