--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,3 +34,4 @@ ashpd = {version = "0.4", features = ["gtk4"]}
 rand = "0.8.5"
 bytes = "1.4.0"
 search-provider = {version = "0.5.2", features = ["gdk-pixbuf"]}
+nom = "7.1.3"
