feat: add search provider

--- a/data/com.github.finefindus.eyedropper.metainfo.xml.in.in
+++ b/data/com.github.finefindus.eyedropper.metainfo.xml.in.in
@@ -172,6 +172,7 @@
        GNOME Software kudos:
     https://gitlab.gnome.org/GNOME/gnome-software/-/blob/main/doc/kudos.md
      -->
+    <kudo>SearchProvider</kudo>
     <kudo>ModernToolkit</kudo>
     <kudo>HiDpiIcon</kudo>
   </kudos>
