--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,3 +33,4 @@ ashpd = {version = "0.4.0-alpha.4", features = ["gtk4"]}
 #ashpd = { git = "https://github.com/bilelmoussaoui/ashpd.git"}
 rand = "0.8.5"
 bytes = "1.4.0"
+search-provider = "0.5.1"
