--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,7 @@ log = "0.4"
 pretty_env_logger = "0.4"
 gettext-rs = { version = "0.7", features = ["gettext-system"] }
 once_cell = "1.17.0"
-gtk = {version = "0.6.0", package = "gtk4"}
+gtk = {version = "0.6.0", package = "gtk4", features = ["v4_6"]}
 glib = "0.17.0"
 adw = {package = "libadwaita", version = "0.3.0", features = ["v1_2"]}
 gtk-macros = "0.3"
@@ -33,4 +33,5 @@ ashpd = {version = "0.4.0-alpha.4", features = ["gtk4"]}
 #ashpd = { git = "https://github.com/bilelmoussaoui/ashpd.git"}
 rand = "0.8.5"
 bytes = "1.4.0"
-search-provider = "0.5.1"
+search-provider = {version = "0.5.1", features = ["gdk-pixbuf"]}
+gdk-pixbuf = "0.17.0"
