add german translation for .desktop file

--- a/data/com.github.finefindus.eyedropper.desktop.in.in
+++ b/data/com.github.finefindus.eyedropper.desktop.in.in
@@ -1,7 +1,9 @@
 [Desktop Entry]
 Name=Eyedropper
 GenericName=Color Picker
+GenericName[de]=Farbauswahl
 Comment=Pick and format colors
+Comment[de]=Farben auswählen und formatieren
 Type=Application
 Exec=eyedropper
 Terminal=false
