--- a/data/resources/meson.build
+++ b/data/resources/meson.build
@@ -1,3 +1,19 @@
+# Compile blueprints
+blueprints = custom_target('blueprints',
+  input: files(
+    'ui/shortcuts.blp',
+    'ui/preferences/custom-format-row.blp',
+    'ui/preferences/preferences.blp',
+    'ui/preferences/name-sources-dialog.blp',
+    'ui/color-format-row.blp',
+    'ui/palette-window.blp',
+    'ui/window.blp',
+  ),
+  output: '.',
+  command: [find_program('blueprint-compiler'), 'batch-compile', '@OUTPUT@', '@CURRENT_SOURCE_DIR@', '@INPUT@'],
+)
+
+
 # Resources
 resources = gnome.compile_resources(
   'resources',
@@ -6,4 +22,5 @@ resources = gnome.compile_resources(
   source_dir: meson.current_build_dir(),
   install: true,
   install_dir: pkgdatadir,
+  dependencies: blueprints,
 )
