--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,10 @@ lto = true
 codegen-units = 1
 strip = true
 
+[build-dependencies]
+phf = { version = "0.11.2", default-features = false }
+phf_codegen = "0.11.1"
+
 [dependencies]
 log = "0.4"
 pretty_env_logger = "0.5"
@@ -34,3 +38,4 @@ rand = "0.8"
 bytes = "1.4"
 search-provider = {version = "0.5", features = ["gdk-pixbuf"]}
 nom = "7.1"
+phf = { version = "0.11.2", features = ["macros"] }
