refactor(window): move history button to own widget

--- a/data/resources/meson.build
+++ b/data/resources/meson.build
@@ -7,6 +7,7 @@ blueprints = custom_target('blueprints',
     'ui/preferences/name-sources-dialog.blp',
     'ui/color-format-row.blp',
     'ui/palette-window.blp',
+    'ui/history-item.blp',
     'ui/window.blp',
   ),
   output: '.',
