--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,3 +40,4 @@ search-provider = { version = "0.6.0", features = ["gdk-pixbuf"] }
 nom = "7.1"
 phf = { version = "0.11.2", features = ["macros"] }
 zbus = "3.15.2"
+palette = "0.7.2"
